# multilingual-hello-world

C/: .gitignore  Makefile  README.md
C/include/: hello-world.h
C/src/: hello-world-english-impl.c  hello-world-portuguese-impl.c  main.c
CPP/: CMakeLists.txt  README.md  build
CPP/include/: hello-world-english-impl.h  hello-world-interface.h  hello-world-portuguese-impl.h
CPP/src/: CMakeLists.txt  hello-world-app.cc  hello-world-english-impl.cc  hello-world-portuguese-impl.cc
